<resources>
    <string name="app_name">BookInvent</string>
    <string name="delivery_ordered">Ordered</string>
    <string name="delivery_shipped">Shipped</string>
    <string name="delivery_delivered">Delivered</string>
    <string name="delivery_in_stock">In Stock</string>
    <string name="fiction">Fiction</string>
    <string name="business">Business</string>
    <string name="pop_sci">Pop Sci</string>
    <string name="other">Other</string>
    <string name="editor_insert_book_failed">We could not add this item</string>
    <string name="editor_insert_book_successful">We\'ve added </string>
    <string name="editor_update_book_failed">We could not update this item</string>
    <string name="editor_update_book_successful">We\'ve updated the info stored for </string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="editor_delete_book_failed">We could not delete this item</string>
    <string name="editor_delete_book_successful">Book deleted!</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_msg">Are you sure you want to remove this item?</string>
    <string name="action_delete_all_entries_this_category">Clear this category</string>
    <string name="action_change_sorting_order">Change sorting order</string>
    <string name="by_stock">By stock</string>
    <string name="by_title">By title</string>
    <string name="by_author">By author</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="email_order_subj">Order for more: </string>
    <string name="email_order_text">Hi! \nWe would like to order a 100 more of those! \nThree million thanks! \nXXX</string>
    <string name="email_defect_subj">We\'re having issues with the batch of </string>
    <string name="email_defect_text">Hi! \nWe would like to let you know that we\'ve found an issue with the
        latest batch. PLEASE DESCRIBE THE ISSUE
        \nWe would really appreciate if you could replace the whole batch,
        because the defect makes it impossible to sell. \nThree million thanks! \nXXX</string>
    <string name="cant_sell_zero">Selling out of stock products is not allowed</string>
    <string name="enter_valid_price">Please enter a valid price</string>
    <string name="invalid_price">Invalid price entered</string>
    <string name="enter_valid_quantity">Please enter the quantity in stock</string>
    <string name="book_requires_name">Book requires a name</string>
    <string name="book_requires_author">Book requires an author</string>
    <string name="book_requires_selling_price">Please add a selling price</string>
    <string name="book_requires_buying_price">Please add a bying price</string>
    <string name="book_requires_quantity">Please add quantity</string>
    <string name="book_requires_supplier_data">Please enter supplier details</string>
    <string name="book_requires_supplier_contact">Please add a valid number or email address</string>
    <string name="book_requires_category">Please select category</string>
    <string name="need_email_app">Please install an email app and try again</string>



</resources>
