<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/action_change_sorting_order"
        app:showAsAction="never" >
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
            <item android:id="@+id/by_stock"
                android:title="@string/by_stock" />
            <item android:id="@+id/by_title"
                android:title="@string/by_title" />
            <item android:id="@+id/by_author"
                android:title="@string/by_author" />
        </group>
    </menu>
    </item>

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_entries_this_category"
        app:showAsAction="never" />
</menu>